--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ClubeFy - Login</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
@@ -14,12 +15,13 @@
         <div class="login-box">
             <h2>Login</h2>
             <p>Escolha uma das opções para continuar</p>
-            <form>
-                <input type="email" placeholder="Insira o seu Email" required>
-                <input type="password" placeholder="Password" required>
+            <form id="loginForm">
+                <input type="email" id="email" placeholder="Insira o seu Email" required>
+                <input type="password" id="senha" placeholder="Password" required>
                 <div class="options">
                     <a href="#" class="forgot-password">Esqueceu a Senha?</a>
                 </div>
+                <p id="errorMessage" class="error-message"></p>
                 <button type="submit">Log in</button>
             </form>
             <div class="social-login">
@@ -32,5 +34,3 @@
     <footer>
         <p>copyright &copy; 2025</p>
     </footer>
-</body>
-</html>
